# GatorGuide

GatorGuideV2/DataScraping/DataScrape/: .gitignore  CollegeScorecardDataDictionary.xlsx  IMPLEMENTATION_SUMMARY.txt  README.md  api_client.py  db_loader.py  db_loader2.py  excel.ipynb  export.ipynb  main.py  pyproject.toml  transform.py
GatorGuideV2/DataScraping/Server/: pyproject.toml
GatorGuideV2/DataScraping/Server/GatorGuide/: manage.py
GatorGuideV2/DataScraping/Server/GatorGuide/API/: admin.py  models.py  serializer.py  urls.py  views.py  views_handler.py  views_sender.py
GatorGuideV2/DataScraping/Server/GatorGuide/GatorGuide/: asgi.py  settings.py  urls.py  wsgi.py
